crates/oxc_react_compiler/tests/snapshots/error.useMemo-non-literal-depslist.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.useMemo-non-literal-depslist.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] UseMemo: Expected the dependency list for useMemo to be an array literal", labels: [LabeledSpan { label: Some("Expected the dependency list for useMemo to be an array literal"), span: SourceSpan { offset: 263, length: 23 }, primary: false }], help: Some("Expected the dependency list for useMemo to be an array literal"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
