crates/oxc_react_compiler/tests/snapshots/escape-analysis-jsx-child.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-jsx-child.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c) {
	const $ = _c(9);
	let x;
	if ($[0] !== a || $[1] !== b || $[2] !== c) {
		x = [];
		if (a) {
			let y;
			if ($[4] !== b || $[5] !== c) {
				y = [];
				if (b) {
					y.push(c);
				}
				$[4] = b;
				$[5] = c;
				$[6] = y;
			} else {
				y = $[6];
			}
			let t0;
			if ($[7] !== y) {
				t0 = <div>{y}</div>;
				$[7] = y;
				$[8] = t0;
			} else {
				t0 = $[8];
			}
			x.push(t0);
		}
		$[0] = a;
		$[1] = b;
		$[2] = c;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
