crates/oxc_react_compiler/tests/snapshots/escape-analysis-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-logical.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(6);
	let t0;
	if ($[0] !== props.a) {
		t0 = [props.a];
		$[0] = props.a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const a = t0;
	let t1;
	if ($[2] !== props.b) {
		t1 = [props.b];
		$[2] = props.b;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	const b = t1;
	let t2;
	if ($[4] !== props.c) {
		t2 = [props.c];
		$[4] = props.c;
		$[5] = t2;
	} else {
		t2 = $[5];
	}
	const c = t2;
	return a && b || c;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
