crates/oxc_react_compiler/tests/snapshots/escape-analysis-non-escaping-interleaved-primitive-dependency.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-non-escaping-interleaved-primitive-dependency.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	const a = props.a + props.b;
	let b;
	if ($[0] !== a || $[1] !== props.c) {
		b = [];
		const c = {};
		c.a = a;
		b.push(props.c);
		$[0] = a;
		$[1] = props.c;
		$[2] = b;
	} else {
		b = $[2];
	}
	return b;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
