crates/oxc_react_compiler/tests/snapshots/escape-analysis-not-conditional-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/escape-analysis-not-conditional-test.js
---
function Component(props) {
	const x = [props.a];
	const y = x ? props.b : props.c;
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
